# Medilocate

./: README.md  SETUP_GUIDE.md  start_backend.bat  start_frontend.bat
Backend/: config.py  init_db.py  test_dijkstra.py
Backend/app/: models.py
Backend/app/routes/: auth.py  inventory_routes.py  upload.py
Backend/app/utils/: graph_interface.py  trie_interface.py
Backend/cpp/graphs/: binding.cpp  dijkstra.h
Backend/cpp/trie/: medicine_trie.cpp  medicine_trie.h
MediLocate-frontend-1/: README.md  package-lock.json  package.json
MediLocate-frontend-1/public/: index.html
MediLocate-frontend-1/src/: App.tsx  index.css  theme.ts
MediLocate-frontend-1/src/components/: Header.tsx  ProtectedRoute.tsx
MediLocate-frontend-1/src/contexts/: AuthContext.tsx
MediLocate-frontend-1/src/pages/: AboutUs.tsx  Dashboard.tsx  Home.tsx  Login.tsx  Pharmacy.tsx  Profile.tsx  Register.tsx  UploadInventory.tsx  UserDashboard.tsx
MediLocate-frontend-1/src/services/: api.ts
MediLocate-frontend-1/src/types/: index.ts
backend/: requirements.txt  seed_data.py
backend/app/: __init__.py
backend/app/routes/: auth.py  inventory_routes.py  search.py  upload.py
backend/app/utils/: geocode_utils.py
backend/cpp/: CMakeLists.txt
backend/cpp/graphs/: dijkstra.cpp
backend/cpp/trie/: binding.cpp
